some minor changes

--- a/src/components/Cars/CarsSection.astro
+++ b/src/components/Cars/CarsSection.astro
@@ -2,9 +2,10 @@
 import CarCard from "./CarCard.astro";
 ---
 
-<div class="grid grid-cols-3 gap-10 px-10 py-24">
-  <CarCard />
-  <CarCard />
-  <CarCard />
-  <CarCard />
+<div class="flex flex-wrap gap-10 py-24 justify-center bg-zinc-950">
+  <CarCard price="$999" carName="Lamborghini Huracan" />
+  <CarCard price="$999" carName="Lamborghini Huracan" />
+  <CarCard price="$999" carName="Lamborghini Huracan" />
+  <CarCard price="$999" carName="Lamborghini Huracan" />
+  <CarCard price="$999" carName="Lamborghini Huracan" />
 </div>
