--- a/src/components/Cars/CarCard.astro
+++ b/src/components/Cars/CarCard.astro
@@ -1,3 +1,32 @@
-<div>
-  <img src="/huracan.jpg" alt="Lamborghini Huracan" />
+---
+import Button from "../Button.astro";
+
+const { price, carName } = Astro.props;
+---
+
+<div class="w-1/4 bg-zinc-50 rounded-sm">
+  <div class="flex relative">
+    <img src="/huracan.jpg" alt="Lamborghini Huracan" />
+    <span class="absolute p-1 bg-red-700 text-zinc-50 right-1 bottom-1"
+      >{price}</span
+    >
+  </div>
+  <div class="flex flex-col text-zinc-900">
+    <h2 class="font-semibold text-lg text-center border-b border-zinc-300 p-2">
+      {carName}
+    </h2>
+    <div class="flex gap-4 p-4">
+      <ul class="font-light">
+        <li>Model year:</li>
+        <li>Engine:</li>
+        <li>Transmission:</li>
+      </ul>
+      <ul class="font-base">
+        <li>2022</li>
+        <li>5.0 V10</li>
+        <li>Automatic</li>
+      </ul>
+    </div>
+    <Button href="#">RESERVE</Button>
+  </div>
 </div>
