--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,14 @@
 ---
 import PageLayout from "../layouts/PageLayout.astro";
 import Hero from "../components/Hero.astro";
+import AboutUs from "../components/AboutUs.astro";
 import CarsSection from "../components/Cars/CarsSection.astro";
+import ServicesAndFeatures from "../components/ServicesAndFeatures.astro";
 ---
 
 <PageLayout>
   <Hero />
+  <AboutUs />
   <CarsSection />
+  <ServicesAndFeatures />
 </PageLayout>
