--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -1,24 +1,29 @@
 ---
-import * as aboutUs from "../content/about/about.md";
+import { getEntry } from "astro:content";
+
+const about = await getEntry("about", "about");
+
+const isReverse =
+  about.data.thumbnail.position == "left" ? "flex-row" : "flex-row-reverse";
 ---
 
-<div class="flex items-center p-6">
+<div class=`flex ${isReverse} items-center p-6`>
   <div class="p-6">
     <img src="/huracan.jpg" alt="Lamborghini Huracan" class="shadow-lg" />
   </div>
   <div class="flex flex-col p-6 gap-4">
     <div>
       <h1 class="font-semibold py-2 text-3xl">
-        {aboutUs.frontmatter.title}
+        {about.data.title}
       </h1>
       <div class="font-light">
-        {aboutUs.frontmatter.paragraphs.map((para: string) => <p>{para}</p>)}
+        {about.data.paragraphs.map((para) => <p>{para}</p>)}
       </div>
     </div>
     <div>
       <h3 class="font-semibold">Why Choose Us?</h3>
       <ul class="font-light list-disc list-inside">
-        {aboutUs.frontmatter.whyChooseUsList.map((li: string) => <li>{li}</li>)}
+        {about.data.whyChooseUsList.map((li) => <li>{li}</li>)}
       </ul>
     </div>
   </div>
