--- a/src/components/Cars/CarCard.astro
+++ b/src/components/Cars/CarCard.astro
@@ -1,19 +1,24 @@
 ---
 import Button from "../Button.astro";
 
-const { price, carName, modelYear, mileage, transmission, slug } = Astro.props;
+import type { CollectionEntry } from "astro:content";
+interface Props {
+  car: CollectionEntry<"cars">;
+}
+
+const { car } = Astro.props;
 ---
 
 <div class="w-1/4 bg-zinc-50 rounded-sm">
   <div class="flex relative">
     <img src="/huracan.jpg" alt="Lamborghini Huracan" />
     <span class="absolute p-1 bg-red-700 text-zinc-50 right-1 bottom-1"
-      >{price}</span
+      >{`$${car.data.price}`}</span
     >
   </div>
   <div class="flex flex-col text-zinc-900">
     <h2 class="font-semibold text-lg text-center border-b border-zinc-300 p-2">
-      {carName}
+      {`${car.data.make} ${car.data.model}`}
     </h2>
     <div class="flex gap-4 p-4">
       <ul class="font-light">
@@ -22,11 +27,11 @@ const { price, carName, modelYear, mileage, transmission, slug } = Astro.props;
         <li>Transmission:</li>
       </ul>
       <ul class="font-base">
-        <li>{modelYear}</li>
-        <li>{mileage}</li>
-        <li>{transmission}</li>
+        <li>{car.data.modelYear}</li>
+        <li>{car.data.mileage}</li>
+        <li>{car.data.transmission}</li>
       </ul>
     </div>
-    <Button href={slug}>RESERVE</Button>
+    <Button href={car.slug}>RESERVE</Button>
   </div>
 </div>
