a big update to small things

--- a/src/components/ServicesAndFeatures.astro
+++ b/src/components/ServicesAndFeatures.astro
@@ -1,12 +1,23 @@
 ---
 import { getEntry } from "astro:content";
+import ServiceCard from "./Cards/ServiceCard.astro";
 
 const servicesAndFeatures = await getEntry(
   "services-and-features",
   "services-and-features"
 );
+
+const servicesList = servicesAndFeatures.data.servicesList;
 ---
 
-<div class="p-6">
-  <h1>{servicesAndFeatures.data.title}</h1>
+<div
+  class="p-6 bg-center"
+  style="background: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(./huracan.jpg); background-position: center;"
+>
+  <h1 class="text-center font-semibold text-3xl mb-6 text-white">
+    {servicesAndFeatures.data.title}
+  </h1>
+  <div class="flex flex-wrap gap-6 justify-center">
+    {servicesList.map((entry) => <ServiceCard service={entry} />)}
+  </div>
 </div>
