--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,13 +2,13 @@
 import PageLayout from "../layouts/PageLayout.astro";
 import Hero from "../components/Hero.astro";
 import AboutUs from "../components/AboutUs.astro";
-import CarsSection from "../components/Cars/CarsSection.astro";
+import Cars from "../components/Cars.astro";
 import ServicesAndFeatures from "../components/ServicesAndFeatures.astro";
 ---
 
 <PageLayout>
   <Hero />
   <AboutUs />
-  <CarsSection />
+  <Cars />
   <ServicesAndFeatures />
 </PageLayout>
