--- a/src/components/Cards/CarCard.astro
+++ b/src/components/Cards/CarCard.astro
@@ -7,18 +7,24 @@ interface Props {
 }
 
 const { car } = Astro.props;
+
+const fullCarName = `${car.data.make} ${car.data.model}`;
 ---
 
-<div class="w-1/4 bg-zinc-50 rounded-sm">
+<div class="w-1/4 min-w-[240px] bg-zinc-50 rounded-sm">
   <div class="flex relative">
-    <img src="/huracan.jpg" alt="Lamborghini Huracan" />
+    <img
+      src={car.data.thumbnail}
+      alt={fullCarName}
+      class="object-cover h-60 w-full"
+    />
     <span class="absolute p-1 bg-red-700 text-zinc-50 right-1 bottom-1"
       >{`$${car.data.price}`}</span
     >
   </div>
   <div class="flex flex-col text-zinc-900">
     <h2 class="font-semibold text-lg text-center border-b border-zinc-300 p-2">
-      {`${car.data.make} ${car.data.model}`}
+      {fullCarName}
     </h2>
     <div class="flex gap-4 p-4">
       <ul class="font-light">
