--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import Hero from "../components/Hero.astro";
 import AboutUs from "../components/AboutUs.astro";
 import Cars from "../components/Cars.astro";
 import ServicesAndFeatures from "../components/ServicesAndFeatures.astro";
+import Contact from "../components/Contact.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <PageLayout>
@@ -11,4 +13,6 @@ import ServicesAndFeatures from "../components/ServicesAndFeatures.astro";
   <AboutUs />
   <Cars />
   <ServicesAndFeatures />
+  <Contact />
+  <Footer />
 </PageLayout>
