Hero background fix

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@ const hero = await getEntry("hero", "hero");
 ---
 
 <div
-  class="flex align-middle justify-center bg-center"
+  class="flex align-middle justify-center bg-center bg-cover"
   style=`background-image: url(${hero.data.background})`
 >
   <div class="text-center p-48">
