--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,8 +9,8 @@ const hero = await getEntry("hero", "hero");
   style=`background-image: url(${hero.data.background})`
 >
   <div class="text-center p-48">
-    <h1 class="font-semibold text-3xl">{hero.data.heading}</h1>
-    <h2 class="font-light">{hero.data.subheading}</h2>
+    <h1 class="font-semibold text-white text-3xl">{hero.data.heading}</h1>
+    <h2 class="font-light text-white">{hero.data.subheading}</h2>
     <button class="p-2 bg-red-700 text-white rounded-sm mt-6"
       >Book Your Dream Ride Now</button
     >
