--- a/src/components/Navigation/NavBar.astro
+++ b/src/components/Navigation/NavBar.astro
@@ -5,7 +5,7 @@
     </div>
     <div>
       <ul class="inline-flex space-x-6">
-        <li>HOME</li>
+        <li><a href="/">HOME</a></li>
         <li>CARS</li>
         <li>CONTACT</li>
       </ul>
