--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,5 +1,6 @@
 ---
 import NavBar from "../components/Navigation/NavBar.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="en">
@@ -11,11 +12,14 @@ import NavBar from "../components/Navigation/NavBar.astro";
     <title>Astro</title>
   </head>
   <body>
-    <head>
+    <header>
       <NavBar />
-    </head>
+    </header>
     <main>
       <slot />
     </main>
+    <footer>
+      <Footer />
+    </footer>
   </body>
 </html>
