--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,13 +5,13 @@ import AboutUs from "../components/AboutUs.astro";
 import Cars from "../components/Cars.astro";
 import ServicesAndFeatures from "../components/ServicesAndFeatures.astro";
 import Contact from "../components/Contact.astro";
-import Footer from "../components/Footer.astro";
+import FeaturedCars from "../components/FeaturedCars.astro";
 ---
 
 <PageLayout>
   <Hero />
   <AboutUs />
-  <Cars />
+  <FeaturedCars />
   <ServicesAndFeatures />
   <Contact />
 </PageLayout>
