--- a/src/components/FeaturedCars.astro
+++ b/src/components/FeaturedCars.astro
@@ -9,19 +9,15 @@ import CarCard from "./Cards/CarCard.astro";
 
 const cars = await getCollection("cars");
 
-const featuredCars = await getEntry("featured-cars", "featured-cars");
+// const featuredCars = await getEntry("featured-cars", "featured-cars");
 
-const bestsellers = await getEntry(featuredCars.data.bestsellers[0].car);
-const newCars = [];
-
-console.log(bestsellers);
+// const bestsellers = await getEntry(featuredCars.data.bestsellers[0].car);
+// const newCars = [];
 ---
 
 <div class="py-24 bg-zinc-950">
-  <h2 class="text-center font-semibold text-3xl mb-24 text-white">
-    {featuredCars.data.title}
-  </h2>
-  <div class="flex flex-wrap gap-10 justify-center">
+  <h2 class="text-center font-semibold text-3xl mb-24 text-white">TESTTEST</h2>
+  <div class="flex flex-wrap gap-10 justify-center text-green-500">
     {cars.map((car) => <CarCard car={car} />)}
   </div>
 </div>
