--- a/src/components/Cards/CarCardComponents/Details.astro
+++ b/src/components/Cards/CarCardComponents/Details.astro
@@ -2,17 +2,17 @@
 // TODO: implement local icons
 import Icon from "astro-icon";
 
-const { modelYear, mileage, transmission } = Astro.props;
+const { modelYear, mileage, transmission, fuel, seats } = Astro.props;
 ---
 
 <div class="grid grid-cols-3 my-4 font-light px-4">
   <div class="flex flex-col items-center gap-2">
-    <Icon class="w-8" name="mdi:calendar" />
-    <p>{modelYear}</p>
+    <img class="w-8" src="/seat.svg" alt="Type of Fuel" />
+    <p>{`${seats} seater`}</p>
   </div>
   <div class="flex flex-col items-center gap-2">
-    <Icon class="w-8" name="mdi:counter" />
-    <p>{mileage}</p>
+    <img class="w-8" src="/typeoffuel.svg" alt="Type of Fuel" />
+    <p>{fuel}</p>
   </div>
   <div class="flex flex-col items-center gap-2">
     <Icon class="w-8" name="mdi:car-shift-pattern" />
