--- a/src/components/FeaturedCars.astro
+++ b/src/components/FeaturedCars.astro
@@ -8,13 +8,21 @@ const bestsellers = await getEntries(featuredCars.data.bestsellers);
 const newCars = await getEntries(featuredCars.data.newCars);
 ---
 
+<style>
+  .active {
+    border-bottom: 2px white;
+  }
+</style>
+
 <div class="py-24 bg-zinc-950">
   <h2 class="text-center font-semibold text-3xl mb-24 text-white">
     {featuredCars.data.title}
   </h2>
   <div>
-    <div class="flex gap-2 text-white">
-      <button id="bestsellers-button">Bestsellers</button>
+    <div class="flex gap-2 text-white justify-center mb-6">
+      <button id="bestsellers-button" class="active border-b-2 border-white p-4"
+        >Bestsellers</button
+      >
       <button id="newcars-button">New Cars</button>
     </div>
     <div id="bestsellers-container" class="block">
