--- a/src/components/Navigation/NavBar.astro
+++ b/src/components/Navigation/NavBar.astro
@@ -10,9 +10,10 @@ const identity = await getEntry("site-identity", "site-identity");
     </div>
     <div>
       <ul class="inline-flex space-x-6">
-        <li><a href="/">HOME</a></li>
-        <li>CARS</li>
-        <li>CONTACT</li>
+        <li><a href="/">Home</a></li>
+        <li>Fleet</li>
+        <li>About Us</li>
+        <li>Contact Us</li>
       </ul>
     </div>
   </div>
