--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -25,7 +25,7 @@ const isReverse =
       </div>
     </div>
     <div>
-      <h3 class="font-semibold">Why Choose Us?</h3>
+      <h3 class="font-semibold">Requirements</h3>
       <ul class="font-light list-disc list-inside">
         {about.data.whyChooseUsList.map((li) => <li>{li}</li>)}
       </ul>
