--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,12 +1,16 @@
 <div class="text-white bg-zinc-900">
-  <div class="flex flex-row p-8">
-    <div class="px-12">
+  <div class="flex flex-row justify-between py-8 px-24">
+    <div class="">
       <h2 class="font-bold">YOUR LOGO</h2>
       <p class="font-light">Experience the Thrill of Driving Exclusivity</p>
     </div>
     <div class="flex flex-row font-semibold gap-4 items-center justify-center">
       <p>email@email</p>
       <p>+1 111 111111</p>
+    </div>
+    <div class="flex flex-col">
+      <p class="font-light">Subscribe to discounts and newsletter</p>
+      <input class="w-96" type="text" name="" id="" />
     </div>
   </div>
 </div>
