--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,8 +9,14 @@
       <p>+1 111 111111</p>
     </div>
     <div class="flex flex-col">
-      <p class="font-light">Subscribe to discounts and newsletter</p>
-      <input class="w-96" type="text" name="" id="" />
+      <p class="font-light mb-2">Subscribe to our exclusive deals</p>
+      <input
+        class="w-96 rounded-md py-1 px-2 text-black"
+        type="text"
+        name=""
+        id=""
+        placeholder="your@email.com"
+      />
     </div>
   </div>
 </div>
