--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,10 @@
 import PageLayout from "../layouts/PageLayout.astro";
 import Hero from "../components/Hero.astro";
 import AboutUs from "../components/AboutUs.astro";
-import Cars from "../components/Cars.astro";
 import ServicesAndFeatures from "../components/ServicesAndFeatures.astro";
 import Contact from "../components/Contact.astro";
 import FeaturedCars from "../components/FeaturedCars.astro";
+import LatestNews from "../components/LatestNews.astro";
 ---
 
 <PageLayout>
@@ -13,5 +13,6 @@ import FeaturedCars from "../components/FeaturedCars.astro";
   <FeaturedCars />
   <AboutUs />
   <ServicesAndFeatures />
+  <LatestNews />
   <Contact />
 </PageLayout>
