blog cards update

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -24,9 +24,13 @@ import TextInput from "./Inputs/TextInput.astro";
           id="message"
           cols="30"
           rows="10"
-          class="p-1 border-2 border-zinc-300 outline-none active:border-red-700 focus:border-red-700 rounded-sm"
+          class="p-1 border-2 border-zinc-300 outline-none active:border-red-600 focus:border-red-600 focus:outline-red-300 focus:outline-offset-0 rounded-sm"
         ></textarea>
       </div>
+      <button
+        class="bg-red-700 text-white py-2 rounded-sm hover:bg-red-800"
+        type="submit">Submit</button
+      >
     </form>
   </div>
 </div>
