cms add service icon

--- a/src/components/Cards/ServiceCard.astro
+++ b/src/components/Cards/ServiceCard.astro
@@ -10,6 +10,8 @@ const { service } = Astro.props;
 ---
 
 <div class="p-6 shadow-md rounded-sm min-w-[250px] max-w-[20%] bg-white">
-  <h2 class="text-xl">{service.serviceHeading}</h2>
+  <h2 class="text-xl">
+    {service.serviceHeading}
+  </h2>
   <p class="font-light">{service.serviceDescription}</p>
 </div>
