--- a/src/components/LatestNews.astro
+++ b/src/components/LatestNews.astro
@@ -4,6 +4,7 @@ const blogPosts = await getCollection("blog");
 
 interface BlogCard {
   title: string;
+  publishingDate: string;
   image: string;
   summary: string;
   slug: string;
@@ -15,11 +16,12 @@ blogPosts.length = 3;
 
 blogPosts.map((post) => {
   const title = post.data.title;
+  const publishingDate = post.data.publishingDate.toLocaleDateString();
   const image = post.data.featuredImage;
   const summary = post.data.intro.substring(0, 196).trim() + "...";
   const slug = post.slug;
 
-  cards.push({ title, image, summary, slug });
+  cards.push({ title, publishingDate, image, summary, slug });
 });
 ---
 
@@ -33,10 +35,22 @@ blogPosts.map((post) => {
         <a href={`/blog/${card.slug}`}>
           <div class="flex flex-col shadow-md w-96 h-full hover:translate-y-2 transition-transform">
             <img class="object-cover h-64" src={card.image} alt={card.title} />
-            <div class="flex h-1/5 items-center">
+            <div class="flex h-1/3 items-center">
               <h3 class="px-4 py-2 font-semibold">{card.title}</h3>
             </div>
-            <p class="px-4 pb-2 font-light self-end">{card.summary}</p>
+            <div>
+              <div class="px-4 pb-2 font-light">
+                <p>{card.summary}</p>
+              </div>
+              <div class="flex flex-row justify-between px-4 py-2">
+                <div class="w-1/2">
+                  <a href={`/blog/${card.slug}`}>Read full article</a>
+                </div>
+                <div class="w-1/2 text-right">
+                  <p>{card.publishingDate}</p>
+                </div>
+              </div>
+            </div>
           </div>
         </a>
       ))
