--- a/src/components/LatestNews.astro
+++ b/src/components/LatestNews.astro
@@ -32,27 +32,24 @@ blogPosts.map((post) => {
   <div class="flex flex-row justify-between mx-12 mt-12">
     {
       cards.map((card) => (
-        <a href={`/blog/${card.slug}`}>
-          <div class="flex flex-col shadow-md w-96 h-full hover:translate-y-2 transition-transform">
-            <img class="object-cover h-64" src={card.image} alt={card.title} />
-            <div class="flex h-1/3 items-center">
-              <h3 class="px-4 py-2 font-semibold">{card.title}</h3>
-            </div>
-            <div>
-              <div class="px-4 pb-2 font-light">
-                <p>{card.summary}</p>
-              </div>
-              <div class="flex flex-row justify-between px-4 py-2">
-                <div class="w-1/2">
-                  <a href={`/blog/${card.slug}`}>Read full article</a>
-                </div>
-                <div class="w-1/2 text-right">
-                  <p>{card.publishingDate}</p>
-                </div>
-              </div>
-            </div>
+        <div class="flex flex-col shadow-md w-96 h-full">
+          <img class="object-cover h-64" src={card.image} alt={card.title} />
+          <div class="flex items-center h-20">
+            <h3 class="px-4 font-semibold">{card.title}</h3>
           </div>
-        </a>
+          <div class="px-4 pb-2 font-light h-32">
+            <p class="m-auto">{card.summary}</p>
+          </div>
+          <div class="flex flex-row px-4 pb-2 justify-between">
+            <a
+              class="border-b-2 px-1 hover:border-red-700"
+              href={`/blog/${card.slug}`}
+            >
+              Read full article
+            </a>
+            <p class="text-gray-700">{card.publishingDate}</p>
+          </div>
+        </div>
       ))
     }
   </div>
