--- a/src/components/Cards/CarCard.astro
+++ b/src/components/Cards/CarCard.astro
@@ -14,7 +14,9 @@ const fullCarName = `${car.data.make} ${car.data.model}`;
 const link = `/cars/${car.slug}`;
 ---
 
-<div class="w-1/4 min-w-[240px] bg-white rounded-sm shadow-lg border">
+<div
+  class="sm:w-2/4 md:w-1/4 min-w-[240px] w-3/4 bg-white rounded-sm shadow-lg border"
+>
   <div class="flex relative">
     <img
       src={car.data.thumbnail}
