--- a/src/components/Cards/ServiceCard.astro
+++ b/src/components/Cards/ServiceCard.astro
@@ -10,13 +10,13 @@ interface Props {
 const { service } = Astro.props;
 ---
 
-<div class="p-6 shadow-md rounded-sm min-w-[250px] max-w-[20%] bg-white">
-  <div class="flex flex-row gap-1 justify-between pb-2">
+<div class="p-6 shadow-md rounded-sm bg-white">
+  <div class="flex flex-row gap-1 justify-between items-center pb-2">
     <h2 class="text-xl">
       {service.serviceHeading}
     </h2>
     <img
-      class="w-8 h-8"
+      class="w-12 h-12"
       src={service.serviceIcon}
       alt={service.serviceHeading}
     />
