--- a/src/components/FeaturedCars.astro
+++ b/src/components/FeaturedCars.astro
@@ -41,6 +41,11 @@ const newCars = await getEntries(featuredCars.data.newCars);
         {newCars.map((car) => <CarCard car={car} />)}
       </div>
     </div>
+    <div class="flex justify-center items-center pt-12">
+      <button class="text-white p-4 px-8 rounded-sm bg-red-700 hover:bg-red-800"
+        >VIEW ALL CARS</button
+      >
+    </div>
   </div>
 </div>
 
