CMS prep for why choose us

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,13 +6,16 @@ import ServicesAndFeatures from "../components/ServicesAndFeatures.astro";
 import Contact from "../components/Contact.astro";
 import FeaturedCars from "../components/FeaturedCars.astro";
 import LatestNews from "../components/LatestNews.astro";
+import WhyChooseUs from "../components/WhyChooseUs.astro";
+import Reviews from "../components/Reviews.astro";
 ---
 
 <PageLayout>
   <Hero />
   <FeaturedCars />
-  <AboutUs />
   <ServicesAndFeatures />
+  <WhyChooseUs />
+  <AboutUs />
   <LatestNews />
   <Contact />
 </PageLayout>
