basic why choose us implementation

--- a/src/components/WhyChooseUs.astro
+++ b/src/components/WhyChooseUs.astro
@@ -1,3 +1,15 @@
+---
+import { getEntry } from "astro:content";
+import WhyChooseUsCard from "./Cards/WhyChooseUsCard.astro";
+
+const whyChooseUs = await getEntry("why-choose-us", "why-choose-us");
+---
+
 <div class="p-6 mt-6">
-  <h2 class="text-center font-semibold text-3xl mb-6">Why Choose Us</h2>
+  <h2 class="text-center font-semibold text-3xl mb-6">
+    {whyChooseUs.data.title}
+  </h2>
+  <div class="flex flex-row justify-center sm:gap-16 gap-2 mt-12">
+    {whyChooseUs.data.card.map((card) => <WhyChooseUsCard data={card} />)}
+  </div>
 </div>
