cms prep for faq

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -22,7 +22,7 @@ import TextInput from "./Inputs/TextInput.astro";
         <TextInput type="date" name="date-to" label="Date to:" />
       </div>
       <div class="flex flex-col">
-        <label class="font-light" for="message">Your message:</label>
+        <label class="font-light" for="message">Message:</label>
         <textarea
           name="message"
           id="message"
