faq section implementation

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import FeaturedCars from "../components/FeaturedCars.astro";
 import LatestNews from "../components/LatestNews.astro";
 import WhyChooseUs from "../components/WhyChooseUs.astro";
 import Reviews from "../components/Reviews.astro";
+import FAQ from "../components/FAQ.astro";
 ---
 
 <PageLayout>
@@ -17,5 +18,6 @@ import Reviews from "../components/Reviews.astro";
   <WhyChooseUs />
   <AboutUs />
   <LatestNews />
+  <FAQ />
   <Contact />
 </PageLayout>
